package logic.event;

import event.Event;

public class LogicEvent implements Event {
    
}
